--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.2
+    container_name: elasticsearch
     environment:
       discovery.type: single-node
     ports:
@@ -10,6 +11,7 @@ services:
 
   fluentd:
     build: ./fluentd
+    container_name: fluentd
     volumes:
       - ./fluentd/conf:/fluentd/etc
       - ./logs:/logs
@@ -18,6 +20,7 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.4.2
+    container_name: kibana
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
     ports:
