--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -1,9 +1,15 @@
-FROM fluent/fluentd:stable
-RUN apk add --update --virtual .build-deps \
+FROM fluent/fluentd:v1.9
+# Use root account to use apk
+USER root
+
+RUN apk add --no-cache --update --virtual .build-deps \
     sudo build-base ruby-dev \
-    && sudo gem install \
-    fluent-plugin-elasticsearch \
-    && sudo gem sources --clear-all \
+    && gem install fluent-plugin-elasticsearch \
+    && gem install fluent-plugin-rewrite-tag-filter \
+    && gem install fluent-plugin-prometheus \
+    && gem install elasticsearch-xpack \
+    && gem sources --clear-all \
     && apk del .build-deps \
-    && rm -rf /var/cache/apk/* \
-    /home/fluent/.gem/ruby/2.3.0/cache/*.gem
+    && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
+
+USER fluent
