--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,8 @@ services:
     container_name: elasticsearch
     environment:
       discovery.type: single-node
-    ports:
-      - 9200:9200
-      - 9300:9300
+    network_mode: host
+
 
   fluentd:
     build: ./fluentd
@@ -15,13 +14,12 @@ services:
     volumes:
       - ./fluentd/conf:/fluentd/etc
       - ./logs:/logs
-    ports:
-      - 8080:8080
+    network_mode: host
+
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.4.2
     container_name: kibana
-    environment:
-      ELASTICSEARCH_URL: http://elasticsearch:9200
-    ports:
-      - 5601:5601
+    volumes:
+      - ./kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
+    network_mode: host
